[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Options.gd" type="Script" id=1]
[ext_resource path="res://Menu/cat_theme.tres" type="Theme" id=2]
[ext_resource path="res://Player/Sound/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/Sound/Lose.wav" type="AudioStream" id=4]
[ext_resource path="res://Menu/KeyButton.tscn" type="PackedScene" id=5]

[node name="Options" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="window" type="ColorRect" parent="."]
margin_left = 256.0
margin_top = 128.0
margin_right = 832.0
margin_bottom = 448.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.376471 )

[node name="TabContainer" type="TabContainer" parent="window"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_right = 264.0
margin_bottom = 256.0
theme = ExtResource( 2 )

[node name="About" type="Tabs" parent="window/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="revision" type="Label" parent="window/TabContainer/About"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -36.0
margin_right = -102.0
margin_bottom = -3.0
text = "rev"

[node name="Sound" type="Tabs" parent="window/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MusicVol" type="HSlider" parent="window/TabContainer/Sound"]
margin_left = 48.0
margin_top = 133.0
margin_right = 304.0
margin_bottom = 149.0
min_value = -70.0
max_value = 10.0
step = 5.0

[node name="Label" type="Label" parent="window/TabContainer/Sound/MusicVol"]
margin_left = 277.0
margin_top = -8.0
margin_right = 345.0
margin_bottom = 25.0
text = "Music"

[node name="SFXVol" type="HSlider" parent="window/TabContainer/Sound"]
margin_left = 48.0
margin_top = 53.0
margin_right = 304.0
margin_bottom = 69.0
min_value = -70.0
max_value = 10.0
step = 5.0

[node name="Label" type="Label" parent="window/TabContainer/Sound/SFXVol"]
margin_left = 272.0
margin_top = -8.0
margin_right = 318.0
margin_bottom = 25.0
text = "SFX"

[node name="Control" type="Tabs" parent="window/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="playmode" type="Label" parent="window/TabContainer/Control"]
visible = false
margin_left = 16.0
margin_top = 157.0
margin_right = 111.0
margin_bottom = 190.0
text = "Play as"

[node name="ChildOptions" type="OptionButton" parent="window/TabContainer/Control/playmode"]
margin_left = 104.0
margin_right = 224.0
margin_bottom = 39.0

[node name="LabelR" type="Label" parent="window/TabContainer/Control"]
margin_left = 48.0
margin_top = 13.0
margin_right = 120.0
margin_bottom = 46.0
text = "rifgt"

[node name="KeyButton" parent="window/TabContainer/Control/LabelR" instance=ExtResource( 5 )]
margin_left = 112.0
margin_top = -1.0
margin_right = 124.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
flat = true
align = 0
action = "ui_runright"

[node name="LabelL" type="Label" parent="window/TabContainer/Control"]
margin_left = 48.0
margin_top = 58.0
margin_right = 120.0
margin_bottom = 91.0
text = "left"

[node name="KeyButton" parent="window/TabContainer/Control/LabelL" instance=ExtResource( 5 )]
margin_left = 112.0
margin_right = 124.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
flat = true
align = 0
action = "ui_runleft"

[node name="LabelJ" type="Label" parent="window/TabContainer/Control"]
margin_left = 48.0
margin_top = 102.0
margin_right = 138.0
margin_bottom = 135.0
text = "up/jump"

[node name="KeyButton" parent="window/TabContainer/Control/LabelJ" instance=ExtResource( 5 )]
margin_left = 112.0
margin_right = 124.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
flat = true
align = 0
action = "ui_jump"

[node name="LabelS" type="Label" parent="window/TabContainer/Control"]
margin_left = 272.0
margin_top = 13.0
margin_right = 347.0
margin_bottom = 46.0
text = "shoot"

[node name="KeyButton" parent="window/TabContainer/Control/LabelS" instance=ExtResource( 5 )]
margin_left = 85.0
margin_top = -1.0
margin_right = 97.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
flat = true
align = 0
action = "ui_shoot"

[node name="LabelR2" type="Label" parent="window/TabContainer/Control"]
margin_left = 272.0
margin_top = 58.0
margin_right = 347.0
margin_bottom = 91.0
text = "roll"

[node name="KeyButton" parent="window/TabContainer/Control/LabelR2" instance=ExtResource( 5 )]
margin_left = 85.0
margin_right = 97.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
flat = true
align = 0
action = "ui_roll"

[node name="LabelD" type="Label" parent="window/TabContainer/Control"]
margin_left = 48.0
margin_top = 149.0
margin_right = 154.0
margin_bottom = 182.0
text = "down/slip"

[node name="KeyButton" parent="window/TabContainer/Control/LabelD" instance=ExtResource( 5 )]
margin_left = 112.0
margin_right = 124.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
flat = true
align = 0
action = "ui_down"

[node name="Graphics" type="Tabs" parent="window/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="res" type="Label" parent="window/TabContainer/Graphics"]
margin_left = 272.0
margin_top = 32.0
margin_right = 312.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="window/TabContainer/Graphics"]
margin_left = 195.0
margin_top = 32.0
margin_right = 252.0
margin_bottom = 65.0
text = "View"

[node name="ViewOptions" type="OptionButton" parent="window/TabContainer/Graphics/Label"]
margin_left = -146.0
margin_top = -5.0
margin_right = -7.0
margin_bottom = 34.0

[node name="CancelButton" type="Button" parent="window"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = -8.0
theme = ExtResource( 2 )
text = "Cancel"

[node name="OKButton" type="Button" parent="window"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -56.0
margin_right = 112.0
margin_bottom = -8.0
theme = ExtResource( 2 )
text = "OK"

[node name="MainMenuButton" type="Button" parent="window"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -56.0
margin_right = 178.0
margin_bottom = -8.0
theme = ExtResource( 2 )
text = "Main Menu"

[node name="SFXTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="value_changed" from="window/TabContainer/Sound/MusicVol" to="." method="_on_MusicVol_value_changed"]
[connection signal="value_changed" from="window/TabContainer/Sound/SFXVol" to="." method="_on_SFXVol_value_changed"]
[connection signal="item_selected" from="window/TabContainer/Control/playmode/ChildOptions" to="." method="_on_ChildOptions_item_selected"]
[connection signal="mouse_entered" from="window/TabContainer/Control/LabelR" to="." method="_on_LabelR_mouse_entered"]
[connection signal="item_selected" from="window/TabContainer/Graphics/Label/ViewOptions" to="." method="_on_ViewOptions_item_selected"]
[connection signal="pressed" from="window/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="window/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="window/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
